RDCC-4453: Addressing Sonar Smells in UserProfileRetriever.java