@@ -90,7 +90,7 @@ public class UserProfileRetriever implements ResourceRetriever<UserProfileIdenti
         //get roles from sidam for each user
         if (rolesRequired) {
             return userProfiles.stream().map(profile -> getRolesFromIdam(profile, true))
-                    .collect(Collectors.toList());
+                    .toList();
         } else {
             return userProfiles;
         }
